<resources>
    <string name="app_name">SusyToDo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_email">susyxu@yeah.net</string>

    <string name="navigation_drawer_title_all">全部</string>
    <string name="navigation_drawer_title_meeting">会议</string>
    <string name="navigation_drawer_title_study">学习</string>
    <string name="navigation_drawer_title_entertain">娱乐</string>
    <string name="navigation_drawer_title_date">约会</string>
    <string name="navigation_drawer_title_daily">生活</string>
    <string name="navigation_drawer_title_done">已完成</string>
    <string name="navigation_drawer_title_soft">功能</string>
    <string name="navigation_drawer_title_setting">设置</string>
    <string name="navigation_drawer_title_search">搜索</string>
    <string name="schedule_save">保存</string>
    <string name="schedule_del">删除</string>
</resources>
