<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="事务分类设置"
        android:textSize="20sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radioButton_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/navigation_drawer_title_meeting"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioButton_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/navigation_drawer_title_study"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioButton_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/navigation_drawer_title_date"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioButton_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="true"
            android:text="@string/navigation_drawer_title_daily"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioButton_entertain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_drawer_title_entertain"
            android:textSize="16sp"/>
    </RadioGroup>
</LinearLayout>
